swiper alignement issue fixed

--- a/src/scss/components/_blogs.scss
+++ b/src/scss/components/_blogs.scss
@@ -25,10 +25,10 @@
             text-align: center;
             height: 100%;
             min-height: 500px;
-            // @include screens.min-tb { flex: 0 0 calc((100% - 1.3vw) / 2); }
-            @include screens.min-tb { flex: 0 0 50%; }
-            // @include screens.min-md { flex: 0 0 calc((100% - 2.76vw) / 3); }
-            @include screens.min-md { flex: 0 0 33.33%; }
+            @include screens.min-tb { flex: 0 0 calc((100% - 1.3vw) / 2); }
+            // @include screens.min-tb { flex: 0 0 50%; }
+            @include screens.min-md { flex: 0 0 calc((100% - 2.6vw) / 3); }
+            // @include screens.min-md { flex: 0 0 33.33%; }
             &__img-container {
                 border: 1px solid var(--color-peach-90);
                 // height: calc((100% - (clamp(20px, 5vw, 30px)) * 2) * 0.7);
