--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -17,11 +17,13 @@
                 object-fit: fill !important;
                 border-radius: 5px !important;
             }
-            @include screens.min-tb { flex: 0 0 50%;
-                // flex: 0 0 calc((100% - 1.3vw) / 2);
+            @include screens.min-tb { 
+                // flex: 0 0 50%;
+                flex: 0 0 calc((100% - 1.3vw) / 2);
             }
-            @include screens.min-md { flex: 0 0 33.33%;
-                // flex: 0 0 calc((100% - 2.76vw) / 3);
+            @include screens.min-md { 
+                // flex: 0 0 33.33%;
+                flex: 0 0 calc((100% - 2.6vw) / 3);
             }
         }
     }
