--- a/src/scss/components/_works.scss
+++ b/src/scss/components/_works.scss
@@ -52,13 +52,13 @@
 
             @include screens.min-tb {
                 text-align: left;
-                // flex: 0 0 calc((100% - 1.3vw) / 2);
-                flex: 0 0 50%;
+                flex: 0 0 calc((100% - 1.3vw) / 2);
+                // flex: 0 0 50%;
             }
 
             @include screens.min-md {
-                // flex: 0 0 calc((100% - 2.76vw) / 3);
-                flex: 0 0 33.33%;
+                flex: 0 0 calc((100% - 2.6vw) / 3);
+                // flex: 0 0 33.33%;
             }
 
             &__title {
